--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 anyio==3.6.1
 attrs==22.1.0
+bcrypt==4.0.0
 black==22.8.0
 cached-property==1.5.2
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+cryptography==38.0.1
+ecdsa==0.18.0
 fastapi==0.82.0
 greenlet==1.1.3
 h11==0.13.0
@@ -14,16 +18,23 @@ inflection==0.5.1
 iniconfig==1.1.1
 mypy-extensions==0.4.3
 packaging==21.3
+passlib==1.7.4
 pathspec==0.10.1
 platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
+pyasn1==0.4.8
+pycparser==2.21
 pydantic==1.10.2
 pyparsing==3.0.9
 pytest==7.1.3
 python-dotenv==0.21.0
+python-jose==3.3.0
+python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.40
 sqlalchemy-orm==1.2.3
